# Opengl_zss

./: .clang-format  10_test_color_menu.cpp  11_test_color_texture.cpp  1_web_source.cpp  2_bilibili_main.cpp  3_VAO.cpp  6_renderer_class.cpp  8_imgui.cpp  9_two_texture_renderer.cpp  CMakeLists.txt  README.md  imgui.ini  main  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
res/shader/: basic.shader
src/: indexbuffer.cpp  indexbuffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.cpp  vertexbufferlayout.h
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
